[metadata]
name = macusers-bryanheinz
version = 0.0.1
url = https://github.com/bryanheinz/python-macusers
author = Bryan Heinz
author_email = pypi@bryanheinz.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: MacOS
description = Get the macOS console username and/or a list of local non-system users.
long_description = file: README.md
long_description_content_type = text/markdown
